# Training-and-Deploying-Machine-Learning-Models

./: .env  .gitignore  README.md  pyproject.toml  sql_app.db
auth_app/: main.py
temp_fastapi/: main.py
temp_fastapi/api/db/: crud.py  db_models.py  session.py  user_schemas.py
temp_fastapi/api/routes/: auth.py  database.py  home.py  model.py  password.py  prediction.py  router.py  schema.py  user.py  utilities.py
temp_fastapi/core/: auth.py  config.py  event_handlers.py  messages.py  security.py
temp_fastapi/data/: cols.json  example.json  sample_data.csv  sample_payload.py
temp_fastapi/models/: payload.py  prediction.py
temp_fastapi/saved_models/: temp_lightgbm_model.joblib  temp_svr_model.joblib
temp_fastapi/services/: ml_model.py
temp_model_training/: model_training.ipynb
