[tool.poetry]
name = "ml-fastapi"
version = "0.1.0"
description = "FastAPI and Scikit Learn for Machine Learning Deployment"
authors = [
    "mutwiriian <iiyanmutuma@gmail.com>",
    "Jason Kinyua <jaysnmury@gmail.com>",
]
readme = "README.md"
packages = [{ include = "ml_fastapi" }]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
black = "^23.3.0"
ruff = "^0.0.263"

[tool.ruff]
# maximum line width
line-length = 120
# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
