[tool.poetry]
name = "ml-fastapi"
version = "0.1.0"
description = "FastAPI and Scikit Learn for Machine Learning Deployment"
authors = [
    "mutwiriian <iiyanmutuma@gmail.com>",
    "Jason Kinyua <jaysnmury@gmail.com>",
]
readme = "README.md"
packages = [{ include = "ml_fastapi" }]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
black = "^23.3.0"
ruff = "^0.0.263"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.ruff]
select = ["E", "F", "I"]
ignore = []
fix = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "D", "E", "F", "I"]
unfixable = []
# maximum line width
line-length = 120

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
